2-elastic/kibana-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: kibana-route
  namespace: openshift-gitops
  labels:
    common.k8s.elastic.co/type: kibana
    kibana.k8s.elastic.co/name: kibana
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  to:
    kind: Service
    name: kibana-kb-http
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
    certificate: ''
    key: ''
    caCertificate: ''
    destinationCACertificate: ''
  port:
    targetPort: https
